Complete student profile and password management APIs